--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -44,7 +44,7 @@
 
     <form class="form-signin" role="form">
         <h2 class="form-signin-heading">Área administrador</h2>
-        <input type="password" class="form-control" placeholder="Password" required ng-model="mipass" >
+        <input type="password" class="form-control" placeholder="Password" required ng-model="mipass" autofocus>
         <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="dologin()">Login</button>
         <span ng-if="iserror">Password incorrecto.</span>
     </form>
