Egutegiari koloreak por linea

--- a/static/pages/egutegia.html
+++ b/static/pages/egutegia.html
@@ -1,6 +1,10 @@
 
+<div class="row show-grid" style="text-align:center">
+  <div class="col-md-4" style="background-color:rgb(0, 0, 255); text-align:center"><span style="color:#ffffff;">Siplace</span></div>  
+  <div class="col-md-4" style="background-color:rgb(0, 128, 0); text-align:center"><span style="color:#ffffff;">Assembleon</span></div>  
+  <div class="col-md-4" style="background-color:orange; text-align:center"><span style="color:#ffffff;">Montaje y repaso</span></div>  
+  </div>
 <div class="row">&nbsp;</div>
-
 <div class="row" ng-controller="egutegiaController">
 
     <div ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources"></div>
