--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -96,6 +96,7 @@
                             <div
                                 data-fetxa="{{eguna1}}"
                                 data-linea="1"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -136,6 +137,7 @@
                             <div
                                 data-fetxa="{{eguna2}}"
                                 data-linea="1"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -176,6 +178,7 @@
                             <div
                                 data-fetxa="{{eguna3}}"
                                 data-linea="1"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -216,6 +219,7 @@
                             <div
                                 data-fetxa="{{eguna4}}"
                                 data-linea="1"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -256,6 +260,7 @@
                             <div
                                 data-fetxa="{{eguna5}}"
                                 data-linea="1"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -296,6 +301,7 @@
                             <div
                                 data-fetxa="{{eguna6}}"
                                 data-linea="1"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -336,6 +342,7 @@
                             <div
                                 data-fetxa="{{eguna7}}"
                                 data-linea="1"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -379,6 +386,7 @@
                             <div
                                 data-fetxa="{{eguna1}}"
                                 data-linea="2"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -419,6 +427,7 @@
                             <div
                                 data-fetxa="{{eguna2}}"
                                 data-linea="2"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -459,6 +468,7 @@
                             <div
                                 data-fetxa="{{eguna3}}"
                                 data-linea="2"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -499,6 +509,7 @@
                             <div
                                 data-fetxa="{{eguna4}}"
                                 data-linea="2"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -539,6 +550,7 @@
                             <div
                                 data-fetxa="{{eguna5}}"
                                 data-linea="2"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -579,6 +591,7 @@
                             <div
                                 data-fetxa="{{eguna6}}"
                                 data-linea="2"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -619,6 +632,7 @@
                             <div
                                 data-fetxa="{{eguna7}}"
                                 data-linea="2"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -663,6 +677,7 @@
                             <div
                                 data-fetxa="{{eguna1}}"
                                 data-linea="3"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -703,6 +718,7 @@
                             <div
                                 data-fetxa="{{eguna2}}"
                                 data-linea="3"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -743,6 +759,7 @@
                             <div
                                 data-fetxa="{{eguna3}}"
                                 data-linea="3"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -783,6 +800,7 @@
                             <div
                                 data-fetxa="{{eguna4}}"
                                 data-linea="3"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -823,6 +841,7 @@
                             <div
                                 data-fetxa="{{eguna5}}"
                                 data-linea="3"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -863,6 +882,7 @@
                             <div
                                 data-fetxa="{{eguna6}}"
                                 data-linea="3"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
@@ -903,6 +923,7 @@
                             <div
                                 data-fetxa="{{eguna7}}"
                                 data-linea="3"
+                                ng-if="isadmin"
                                 editable-text="orden.ref"
                                 onbeforesave="addData($data, this)">+</div>
                         </td>
