Gantt, fixing day and hours issue

--- a/static/pages/gantt.html
+++ b/static/pages/gantt.html
@@ -12,6 +12,10 @@
     <div gantt-template="task_text">
       {{task.text | uppercase}}
     </div>
+    <ul class="unstyled">
+      <li>Export to PDF</li>
+      <li>Export to PNG</li>
+    </ul>
   </div>
 
 </div>
